# rust_crudify

./: .gitignore  Cargo.toml  rustfmt.toml
.config/: nextest.toml
crudify_generator/: Cargo.toml
crudify_generator/example_specs/: pet.json
crudify_generator/src/: errors.rs  file_creator.rs  json_converter.rs  lib.rs  main_file_creator.rs  sql_creator.rs
crudify_generator/templates/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/components/: entity_builder.rs  mod.rs
server/: .env  Cargo.toml  README.MD
server/src/: main.rs  tests.rs
server/src/converter/: file_creator.rs  json_converter.rs  mod.rs
