[package]
name = "crudify_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "1.0.85"}

# for sort retaining map
indexmap = "1.9.1"

log = "0.4.17"

# for static datastructures
phf = { version = "0.11.1", features = ["macros"] }

[dev-dependencies]
env_logger = "0.9.1"